@@ -26,7 +26,9 @@ class QPrinter;
 
 #ifndef QWT_NO_SVG
 #ifdef QT_SVG_LIB
+#if QT_VERSION >= 0x040500
 class QSvgGenerator;
+#endif
 #endif
 #endif
 
